--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "build-recipe-app",
   "version": "0.1.0",
-  "homepage":"https://keerthi-mani.github.io/React-Recipe-App/",
+  "homepage": "https://keerthi-mani.github.io/React-Recipe-App/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "build": "^0.1.4",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
